--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/><audio id="myAudio">
-    <source src="https://raw.githubusercontent.com/faster484fe5/goofyimage/main/Ahhhshit.mp3" type="audio/mpeg">
-</audio>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CHAOS ULTIME</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-<script>
-    document.addEventListener("click", function () {
-        const audio = document.getElementById("myAudio");
-        audio.volume = 1.0; // Met le volume au max
-        audio.play().catch(error => console.log("Erreur de lecture :", error));
-    }, { once: true }); // Se joue une seule fois au premier clic
-</script>
+    <audio id="myAudio">
+        <source src="https://raw.githubusercontent.com/faster484fe5/goofyimage/main/Ahhhshit.mp3" type="audio/mpeg">
+    </audio>
+
+    <img id="robot" src="https://raw.githubusercontent.com/faster484fe5/goofyimage/refs/heads/main/IMG_0044.jpeg" alt="Taxman">
+
+    <script src="script.js"></script>
+</body>
+</html>
